# whisper-batch-api-py

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Containerfile.cuda11jp5  Containerfile.cuda12jp6  Containerfile.l4t-r36.4  Dockerfile  README.md  Untitled-3.sh  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: container-jetson-pr.yml  container-jetson-push.yml  docker-build-action.yml  python_code_quality.yml  release-please.yml
docs/: jetson-deployment-guide.md  jetson-runner-setup.md
src/app/: main.py
src/whisper_batch_api/: main.py
