[tool.poetry]
name = "whisper-batch-api"
version = "1.2.0"
description = "Simple Whisper API for batch processing of audio data."
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "MIT"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
faster-whisper = "^0.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]
ignore = ["E203"]
